getUnassigned and getAll impl
