# packages/taskManager-app/server/api/controllers/examples/router.ts
@@ -9,6 +9,8 @@ export default express.Router()
     .get('/task/tasks/:id', controller.task_get)
     .get('/task/tasks/owned/:id', controller.task_getOwned)
     .get('/task/tasks/assigned:id', controller.task_getAssignedTo)
+    .get('/task/tasks', controller.task_getAll)
+    .get('/task/unassigned', controller.task_getUnassigned)
     .post('/task/create', controller.task_create)
     .post('/task/modify', controller.task_modify)
     .post('/task/assign', controller.task_assign)
